syntax = "proto3";

package ozon.dev.tms.api;
option go_package = "gitlab.ozon.dev/Vanek623/task-manager-system/pkg/api;api";

import "google/api/annotations.proto";

service Admin {
  rpc TaskCreate(TaskCreateRequest) returns (TaskCreateResponse) {
    option (google.api.http) = {
      post: "/v1/user"
      body: "*"
    };
  }

  rpc TaskList(TaskListRequest) returns (TaskListResponse) {
    option (google.api.http) = {
      get: "/v1/users"
    };
  }

  rpc TaskUpdate(TaskUpdateRequest) returns (TaskUpdateResponse) {
    option (google.api.http) = {
      put: "/v1/user"
      body: "*"
    };
  }

  rpc TaskDelete(TaskDeleteRequest) returns (TaskDeleteResponse) {
    option (google.api.http) = {
      delete: "/v1/user"
      body: "*"
    };
  }

  rpc TaskGet(TaskGetRequest) returns (TaskGetResponse) {
    option (google.api.http) = {
      get: "/v1/user"
    };
  }
}

/// ---------------------------------------------------------------------------------------------------------------------
// TaskCreate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message TaskCreateRequest {
  string Title = 1;
  optional string Description = 2;
}
message TaskCreateResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// TaskList endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message TaskListRequest {}
message TaskListResponse {
  repeated Task tasks = 1;

  message Task {
    uint64 ID = 1;
    string Title = 2;
  }
}

// ---------------------------------------------------------------------------------------------------------------------
// TaskUpdate endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message TaskUpdateRequest {
  uint64 ID = 1;
  string Title = 2;
  optional string Description = 3;
}
message TaskUpdateResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// TaskDelete endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message TaskDeleteRequest {
  uint64 ID = 1;
}
message TaskDeleteResponse {}

// ---------------------------------------------------------------------------------------------------------------------
// TaskDelete endpoint messages
// ---------------------------------------------------------------------------------------------------------------------

message TaskGetRequest {
  uint64  ID = 1;
}
message TaskGetResponse {
  string Title = 1;
  optional string Description = 2;
  int64 Tm = 3;
}